@@ -17,6 +17,8 @@
 * BUG: Do not allow user names that vary only by case ("user" vs. "uSer").
 * BUG: Fix issue with browsers that encode URL as UTF-8 instead of ISO-8859-1.
 * BUG: Remove extra "/" that could sometimes appear in image URLs.
+* FEATURE: Uploading a second version of an image should add a record to the
+  recent changes.
 * FEATURE: Danish translations from Anders Monrad (g9adm).
 * FEATURE: Updated German translations from Axel Kramer (axelclk).
 * FEATURE: Updated Hungarian translations from bDaneE.
